[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/gui/hud/StatBox_Boxed.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=2]
[ext_resource path="res://game/gui/hud/Hud.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/fonts/body_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://_obs/StatBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/gui/hud/GameTimer.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/gui/hud/StartCountdown.tscn" type="PackedScene" id=9]

[node name="Hud" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -2560.0
margin_bottom = 1440.0
rect_min_size = Vector2( 2560, 1440 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0, 1440.0, 1168.0, 72.0, 32.0, 80.0, 136.0 ],
"_edit_vertical_guides_": [ 2560.0, 0.0, 1280.0 ]
}

[node name="Popups" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartCountdown" parent="Popups" instance=ExtResource( 9 )]
visible = false

[node name="GameEvent" type="Control" parent="Popups"]
visible = false
margin_left = 190.0
margin_top = 122.0
margin_right = 454.0
margin_bottom = 203.0

[node name="Name" type="Label" parent="Popups/GameEvent"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_right = 44.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Player 1"
align = 1

[node name="Event" type="Label" parent="Popups/GameEvent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = -64.0
margin_right = 122.5
text = "DEAD!!!"
align = 1

[node name="__Label" type="Label" parent="."]
margin_top = -176.0
margin_right = 1153.0
margin_bottom = -128.0
text = "pozicije v editorju delujejo, če ročno setaš layout anchors (v kodi je to avomatsko)"

[node name="__ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 2760.0
margin_bottom = 1472.0

[node name="HudSections" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Left" type="VBoxContainer" parent="HudSections"]
margin_right = 1106.0
margin_bottom = 1408.0
size_flags_horizontal = 3

[node name="StatBox_Boxed" parent="HudSections/Left" instance=ExtResource( 1 )]
margin_right = 1106.0
margin_bottom = 372.0

[node name="StatBox_Boxed_2" parent="HudSections/Left" instance=ExtResource( 1 )]
margin_top = 376.0
margin_right = 1106.0
margin_bottom = 748.0

[node name="StatBox_Boxed_4" parent="HudSections/Left" instance=ExtResource( 1 )]
margin_top = 752.0
margin_right = 1106.0
margin_bottom = 1124.0

[node name="StatBox_Boxed_5" parent="HudSections/Left" instance=ExtResource( 1 )]
visible = false
margin_top = 852.0
margin_right = 840.0
margin_bottom = 1132.0

[node name="StatBox_Boxed_3" parent="HudSections/Left" instance=ExtResource( 1 )]
margin_top = 1128.0
margin_right = 1106.0
margin_bottom = 1408.0
size_flags_vertical = 8

[node name="Center" type="VBoxContainer" parent="HudSections"]
margin_left = 1110.0
margin_right = 1703.0
margin_bottom = 1408.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="Top" type="VBoxContainer" parent="HudSections/Center"]
margin_right = 593.0
margin_bottom = 702.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Timer" type="MarginContainer" parent="HudSections/Center/Top"]
margin_left = 133.0
margin_right = 460.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="HudSections/Center/Top/Timer"]
show_behind_parent = true
margin_right = 327.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 0.235294 )

[node name="BoxContainer" type="HBoxContainer" parent="HudSections/Center/Top/Timer"]
margin_right = 327.0
margin_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 0
custom_constants/separation = 16

[node name="VSeparator" type="VSeparator" parent="HudSections/Center/Top/Timer/BoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 8.0
margin_bottom = 80.0
custom_constants/separation = 8

[node name="GameTimer" parent="HudSections/Center/Top/Timer/BoxContainer" instance=ExtResource( 8 )]
margin_left = 24.0
margin_right = 303.0
size_flags_horizontal = 6

[node name="VSeparator_2" type="VSeparator" parent="HudSections/Center/Top/Timer/BoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 319.0
margin_right = 327.0
margin_bottom = 80.0
custom_constants/separation = 8

[node name="Record" type="MarginContainer" parent="HudSections/Center/Top"]
margin_top = 84.0
margin_right = 593.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 5

[node name="ColorRect" type="ColorRect" parent="HudSections/Center/Top/Record"]
show_behind_parent = true
margin_right = 593.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.235294 )

[node name="BoxContainer" type="HBoxContainer" parent="HudSections/Center/Top/Record"]
margin_right = 593.0
margin_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 0
custom_constants/separation = 16

[node name="VSeparator" type="VSeparator" parent="HudSections/Center/Top/Record/BoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_bottom = 64.0
custom_constants/separation = 0

[node name="LevelRecord" type="Label" parent="HudSections/Center/Top/Record/BoxContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 573.0
margin_bottom = 56.0
grow_horizontal = 2
size_flags_horizontal = 6
text = "Best lap: 00:00.0 by JOU"
align = 1
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="VSeparator_2" type="VSeparator" parent="HudSections/Center/Top/Record/BoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 589.0
margin_right = 593.0
margin_bottom = 64.0

[node name="Btm" type="VBoxContainer" parent="HudSections/Center"]
margin_left = 169.0
margin_top = 706.0
margin_right = 423.0
margin_bottom = 1408.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 2

[node name="LevelId" type="MarginContainer" parent="HudSections/Center/Btm"]
margin_top = 638.0
margin_right = 254.0
margin_bottom = 702.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 5

[node name="ColorRect" type="ColorRect" parent="HudSections/Center/Btm/LevelId"]
show_behind_parent = true
margin_right = 254.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.235294 )

[node name="BoxContainer" type="HBoxContainer" parent="HudSections/Center/Btm/LevelId"]
margin_right = 254.0
margin_bottom = 64.0
grow_horizontal = 2
custom_constants/separation = 16

[node name="VSeparator" type="VSeparator" parent="HudSections/Center/Btm/LevelId/BoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_bottom = 64.0
custom_constants/separation = 0

[node name="LevelName" type="Label" parent="HudSections/Center/Btm/LevelId/BoxContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 234.0
margin_bottom = 56.0
grow_horizontal = 2
size_flags_horizontal = 6
text = "Prva runda"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="VSeparator_2" type="VSeparator" parent="HudSections/Center/Btm/LevelId/BoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 250.0
margin_right = 254.0
margin_bottom = 64.0

[node name="Right" type="VBoxContainer" parent="HudSections"]
margin_left = 1707.0
margin_right = 2774.0
margin_bottom = 1408.0
size_flags_horizontal = 3

[node name="StatBox" parent="HudSections/Right" instance=ExtResource( 5 )]
modulate = Color( 0.964706, 0, 0, 1 )
margin_top = 0.0
margin_right = 1067.0
margin_bottom = 466.0
rect_rotation = 0.0
__meta__ = {
"_edit_horizontal_guides_": [ 47.0 ]
}

[node name="DriverId" parent="HudSections/Right/StatBox" index="0"]
margin_right = 1067.0

[node name="ColorRect" parent="HudSections/Right/StatBox/DriverId" index="0"]
margin_right = 1067.0

[node name="DriverLine" parent="HudSections/Right/StatBox/DriverId" index="1"]
margin_right = 1067.0

[node name="StatWins" parent="HudSections/Right/StatBox/DriverId/DriverLine" index="3"]
visible = false
name_as_icon = false

[node name="StatLife" parent="HudSections/Right/StatBox/DriverId/DriverLine" index="4"]
visible = false
name_as_icon = false

[node name="StatHealth" parent="HudSections/Right/StatBox/DriverId/DriverLine" index="5"]
margin_left = 331.0
margin_right = 677.0
name_as_icon = false

[node name="StatLevelRank" parent="HudSections/Right/StatBox/DriverId/DriverLine" index="6"]
margin_left = 697.0
margin_right = 1043.0
name_as_icon = false

[node name="MarginB" parent="HudSections/Right/StatBox/DriverId/DriverLine" index="7"]
margin_left = 1063.0
margin_right = 1067.0

[node name="DriverStats" parent="HudSections/Right/StatBox" index="1"]
visible = false

[node name="StatCash" parent="HudSections/Right/StatBox/DriverStats/HBoxContainer" index="1"]
visible = false
name_as_icon = false

[node name="StatPoints" parent="HudSections/Right/StatBox/DriverStats/HBoxContainer" index="2"]
visible = false
name_as_icon = false

[node name="StatGas" parent="HudSections/Right/StatBox/DriverStats/HBoxContainer" index="3"]
visible = false
name_as_icon = false

[node name="RaceStats" parent="HudSections/Right/StatBox" index="2"]
margin_top = 72.0
margin_right = 748.0
margin_bottom = 136.0

[node name="ColorRect" parent="HudSections/Right/StatBox/RaceStats" index="0"]
margin_right = 748.0

[node name="HBoxContainer" parent="HudSections/Right/StatBox/RaceStats" index="1"]
margin_right = 748.0

[node name="StatLapCount" parent="HudSections/Right/StatBox/RaceStats/HBoxContainer" index="1"]
margin_right = 366.0
name_as_icon = false

[node name="StatBestLap" parent="HudSections/Right/StatBox/RaceStats/HBoxContainer" index="2"]
visible = false
name_as_icon = false

[node name="StatLapTime" parent="HudSections/Right/StatBox/RaceStats/HBoxContainer" index="3"]
margin_left = 382.0
margin_right = 728.0
name_as_icon = false

[node name="StatLevelTime" parent="HudSections/Right/StatBox/RaceStats/HBoxContainer" index="4"]
visible = false
name_as_icon = false

[node name="MarginB" parent="HudSections/Right/StatBox/RaceStats/HBoxContainer" index="5"]
margin_left = 744.0
margin_right = 748.0

[node name="BattleStats" parent="HudSections/Right/StatBox" index="3"]
visible = false

[node name="GoalReached" parent="HudSections/Right/StatBox/BattleStats/HBoxContainer" index="1"]
name_as_icon = false

[node name="StatSmallBullet" parent="HudSections/Right/StatBox/BattleStats/HBoxContainer" index="2"]
name_as_icon = false

[node name="StatBullet" parent="HudSections/Right/StatBox/BattleStats/HBoxContainer" index="3"]
visible = false
name_as_icon = false

[node name="StatMisile" parent="HudSections/Right/StatBox/BattleStats/HBoxContainer" index="4"]
visible = false
name_as_icon = false

[node name="StatMina" parent="HudSections/Right/StatBox/BattleStats/HBoxContainer" index="5"]
visible = false
name_as_icon = false

[node name="StatBox_2" parent="HudSections/Right" instance=ExtResource( 5 )]
modulate = Color( 0.964706, 0, 0, 1 )
margin_top = 470.0
margin_right = 1067.0
margin_bottom = 937.0
rect_rotation = 0.0
__meta__ = {
"_edit_horizontal_guides_": [ 47.0 ]
}

[node name="DriverId" parent="HudSections/Right/StatBox_2" index="0"]
margin_right = 1067.0

[node name="ColorRect" parent="HudSections/Right/StatBox_2/DriverId" index="0"]
margin_right = 1067.0

[node name="DriverLine" parent="HudSections/Right/StatBox_2/DriverId" index="1"]
margin_right = 1067.0

[node name="StatWins" parent="HudSections/Right/StatBox_2/DriverId/DriverLine" index="3"]
visible = false
name_as_icon = false

[node name="StatLife" parent="HudSections/Right/StatBox_2/DriverId/DriverLine" index="4"]
visible = false
name_as_icon = false

[node name="StatHealth" parent="HudSections/Right/StatBox_2/DriverId/DriverLine" index="5"]
margin_left = 331.0
margin_right = 677.0
name_as_icon = false

[node name="StatLevelRank" parent="HudSections/Right/StatBox_2/DriverId/DriverLine" index="6"]
margin_left = 697.0
margin_right = 1043.0
name_as_icon = false

[node name="MarginB" parent="HudSections/Right/StatBox_2/DriverId/DriverLine" index="7"]
margin_left = 1063.0
margin_right = 1067.0

[node name="DriverStats" parent="HudSections/Right/StatBox_2" index="1"]
visible = false

[node name="StatCash" parent="HudSections/Right/StatBox_2/DriverStats/HBoxContainer" index="1"]
visible = false
name_as_icon = false

[node name="StatPoints" parent="HudSections/Right/StatBox_2/DriverStats/HBoxContainer" index="2"]
visible = false
name_as_icon = false

[node name="StatGas" parent="HudSections/Right/StatBox_2/DriverStats/HBoxContainer" index="3"]
visible = false
name_as_icon = false

[node name="RaceStats" parent="HudSections/Right/StatBox_2" index="2"]
margin_top = 72.0
margin_right = 748.0
margin_bottom = 136.0

[node name="ColorRect" parent="HudSections/Right/StatBox_2/RaceStats" index="0"]
margin_right = 748.0

[node name="HBoxContainer" parent="HudSections/Right/StatBox_2/RaceStats" index="1"]
margin_right = 748.0

[node name="StatLapCount" parent="HudSections/Right/StatBox_2/RaceStats/HBoxContainer" index="1"]
margin_right = 366.0
name_as_icon = false

[node name="StatBestLap" parent="HudSections/Right/StatBox_2/RaceStats/HBoxContainer" index="2"]
visible = false
name_as_icon = false

[node name="StatLapTime" parent="HudSections/Right/StatBox_2/RaceStats/HBoxContainer" index="3"]
margin_left = 382.0
margin_right = 728.0
name_as_icon = false

[node name="StatLevelTime" parent="HudSections/Right/StatBox_2/RaceStats/HBoxContainer" index="4"]
visible = false
name_as_icon = false

[node name="MarginB" parent="HudSections/Right/StatBox_2/RaceStats/HBoxContainer" index="5"]
margin_left = 744.0
margin_right = 748.0

[node name="BattleStats" parent="HudSections/Right/StatBox_2" index="3"]
visible = false

[node name="GoalReached" parent="HudSections/Right/StatBox_2/BattleStats/HBoxContainer" index="1"]
name_as_icon = false

[node name="StatSmallBullet" parent="HudSections/Right/StatBox_2/BattleStats/HBoxContainer" index="2"]
name_as_icon = false

[node name="StatBullet" parent="HudSections/Right/StatBox_2/BattleStats/HBoxContainer" index="3"]
visible = false
name_as_icon = false

[node name="StatMisile" parent="HudSections/Right/StatBox_2/BattleStats/HBoxContainer" index="4"]
visible = false
name_as_icon = false

[node name="StatMina" parent="HudSections/Right/StatBox_2/BattleStats/HBoxContainer" index="5"]
visible = false
name_as_icon = false

[node name="StatBox_3" parent="HudSections/Right" instance=ExtResource( 5 )]
modulate = Color( 0.964706, 0, 0, 1 )
margin_top = 941.0
margin_right = 1067.0
margin_bottom = 1408.0
rect_rotation = 0.0
__meta__ = {
"_edit_horizontal_guides_": [ 47.0 ]
}

[node name="DriverId" parent="HudSections/Right/StatBox_3" index="0"]
margin_right = 1067.0

[node name="ColorRect" parent="HudSections/Right/StatBox_3/DriverId" index="0"]
margin_right = 1067.0

[node name="DriverLine" parent="HudSections/Right/StatBox_3/DriverId" index="1"]
margin_right = 1067.0

[node name="StatWins" parent="HudSections/Right/StatBox_3/DriverId/DriverLine" index="3"]
visible = false
name_as_icon = false

[node name="StatLife" parent="HudSections/Right/StatBox_3/DriverId/DriverLine" index="4"]
visible = false
name_as_icon = false

[node name="StatHealth" parent="HudSections/Right/StatBox_3/DriverId/DriverLine" index="5"]
margin_left = 331.0
margin_right = 677.0
name_as_icon = false

[node name="StatLevelRank" parent="HudSections/Right/StatBox_3/DriverId/DriverLine" index="6"]
margin_left = 697.0
margin_right = 1043.0
name_as_icon = false

[node name="MarginB" parent="HudSections/Right/StatBox_3/DriverId/DriverLine" index="7"]
margin_left = 1063.0
margin_right = 1067.0

[node name="DriverStats" parent="HudSections/Right/StatBox_3" index="1"]
visible = false

[node name="StatCash" parent="HudSections/Right/StatBox_3/DriverStats/HBoxContainer" index="1"]
visible = false
name_as_icon = false

[node name="StatPoints" parent="HudSections/Right/StatBox_3/DriverStats/HBoxContainer" index="2"]
visible = false
name_as_icon = false

[node name="StatGas" parent="HudSections/Right/StatBox_3/DriverStats/HBoxContainer" index="3"]
visible = false
name_as_icon = false

[node name="RaceStats" parent="HudSections/Right/StatBox_3" index="2"]
margin_top = 72.0
margin_right = 748.0
margin_bottom = 136.0

[node name="ColorRect" parent="HudSections/Right/StatBox_3/RaceStats" index="0"]
margin_right = 748.0

[node name="HBoxContainer" parent="HudSections/Right/StatBox_3/RaceStats" index="1"]
margin_right = 748.0

[node name="StatLapCount" parent="HudSections/Right/StatBox_3/RaceStats/HBoxContainer" index="1"]
margin_right = 366.0
name_as_icon = false

[node name="StatBestLap" parent="HudSections/Right/StatBox_3/RaceStats/HBoxContainer" index="2"]
visible = false
name_as_icon = false

[node name="StatLapTime" parent="HudSections/Right/StatBox_3/RaceStats/HBoxContainer" index="3"]
margin_left = 382.0
margin_right = 728.0
name_as_icon = false

[node name="StatLevelTime" parent="HudSections/Right/StatBox_3/RaceStats/HBoxContainer" index="4"]
visible = false
name_as_icon = false

[node name="MarginB" parent="HudSections/Right/StatBox_3/RaceStats/HBoxContainer" index="5"]
margin_left = 744.0
margin_right = 748.0

[node name="BattleStats" parent="HudSections/Right/StatBox_3" index="3"]
visible = false

[node name="GoalReached" parent="HudSections/Right/StatBox_3/BattleStats/HBoxContainer" index="1"]
name_as_icon = false

[node name="StatSmallBullet" parent="HudSections/Right/StatBox_3/BattleStats/HBoxContainer" index="2"]
name_as_icon = false

[node name="StatBullet" parent="HudSections/Right/StatBox_3/BattleStats/HBoxContainer" index="3"]
visible = false
name_as_icon = false

[node name="StatMisile" parent="HudSections/Right/StatBox_3/BattleStats/HBoxContainer" index="4"]
visible = false
name_as_icon = false

[node name="StatMina" parent="HudSections/Right/StatBox_3/BattleStats/HBoxContainer" index="5"]
visible = false
name_as_icon = false

[editable path="HudSections/Right/StatBox"]
[editable path="HudSections/Right/StatBox/DriverStats/HBoxContainer/StatGas"]
[editable path="HudSections/Right/StatBox_2"]
[editable path="HudSections/Right/StatBox_2/DriverStats/HBoxContainer/StatGas"]
[editable path="HudSections/Right/StatBox_3"]
[editable path="HudSections/Right/StatBox_3/DriverStats/HBoxContainer/StatGas"]
